# seisfetch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  environment.yml  pyproject.toml
.jupyter-kernels/share/jupyter/kernels/seisfetch-notebooks/: kernel.json
benchmarks/: bench_throughput.py
notebooks/: 01_quickstart.ipynb  02_bulk_mining.ipynb  03_xarray_zarr_pipeline.ipynb  04_earth2studio_interop.ipynb  README.md
seisfetch/: __init__.py  __main__.py  bulk.py  client.py  convert.py  earth2.py  fdsn.py  s3.py  utils.py
tests/: conftest.py  diag_issues.py  helpers.py  inspect_pm.py  inspect_pm_bundle.py  inspect_pm_concat.py  inspect_pm_diff.py  inspect_pm_mut.py  inspect_pm_trace.py  run_compare_readers.py  run_readers.py  show_tohoku.py  show_tohoku_filtered.py  test_bulk.py  test_cli.py  test_client.py  test_convert.py  test_earth2.py  test_fdsn.py  test_integration.py  test_pymseed_vs_obspy.py  test_s3.py  test_utils.py
