[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "seisfetch"
version = "0.2.0"
description = "Fast seismic miniSEED from EarthScope, SCEDC, NCEDC, and 37+ FDSN servers. Core: numpy + boto3 + pymseed. No ObsPy required."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "UW ESS Denolle Group" },
]
keywords = ["seismology", "earthscope", "scedc", "ncedc", "miniseed", "fdsn", "s3", "numpy", "xarray", "zarr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "boto3>=1.28",
    "pymseed>=0.2",
]

[project.optional-dependencies]
obspy = ["obspy>=1.4"]
fdsn = ["httpx>=0.25"]
xarray = ["xarray>=2023.1"]
zarr = ["xarray>=2023.1", "zarr>=2.14"]
auth = ["earthscope-sdk>=1.0"]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6",
    "xarray>=2023.1",
    "zarr>=2.14",
    "obspy>=1.4",
]
dev = [
    "pytest>=7",
    "pytest-cov",
    "moto[s3]>=5",
    "httpx>=0.25",
    "respx>=0.21",
    "obspy>=1.4",
    "xarray>=2023.1",
    "zarr>=2.14",
    "jupyter>=1.0",
    "ipykernel>=6",
]
bench = [
    "httpx>=0.25",
    "tabulate",
]
all = [
    "seisfetch[obspy,fdsn,xarray,zarr,auth,notebooks,dev,bench]",
]

[project.scripts]
seisfetch = "seisfetch.__main__:main"

[tool.setuptools.packages.find]
include = ["seisfetch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit real EarthScope endpoints (deselect with -m 'not integration')",
]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

# ---------------------------------------------------------------------------
# Pixi
#
# Two environments:
#   default   — dev: pytest, ruff, coverage  (no Jupyter)
#   notebooks — dev + JupyterLab + ipykernel (for VS Code & browser notebooks)
#
# Quickstart:
#   pixi run test                            # unit tests
#   pixi run -e notebooks kernel-install     # register Jupyter kernel
#   pixi run -e notebooks lab                # open JupyterLab in browser
# ---------------------------------------------------------------------------
[tool.pixi.workspace]
name = "seisfetch"
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

# ── default environment (dev / CI) ──────────────────────────────────────────
[tool.pixi.dependencies]
python = ">=3.9,<3.13"
pip = "*"
ruff = "*"

[tool.pixi.pypi-dependencies]
seisfetch = { path = ".", editable = true, extras = ["dev"] }

[tool.pixi.tasks]
test      = "pytest"
test-cov  = "pytest --cov=seisfetch --cov-report=term-missing"
test-int  = "pytest -m integration"
lint      = "ruff check seisfetch tests"
fmt       = "ruff format seisfetch tests"
bench     = "python -m benchmarks.bench_throughput"

# ── notebooks environment ────────────────────────────────────────────────────
[tool.pixi.environments]
notebooks = { features = ["notebooks"], solve-group = "default" }

[tool.pixi.feature.notebooks.dependencies]
python = ">=3.9,<3.13"
pip = "*"
jupyterlab = ">=4.0"
ipykernel = ">=6"

[tool.pixi.feature.notebooks.pypi-dependencies]
seisfetch = { path = ".", editable = true, extras = ["obspy", "xarray", "zarr"] }

[tool.pixi.feature.notebooks.tasks]
# Register the kernel so it shows in VS Code and JupyterLab
kernel-install = "python -m ipykernel install --user --name seisfetch --display-name 'Python (seisfetch)'"
# Launch JupyterLab in the browser
lab = "jupyter lab notebooks/"
